Ensure date table cells don't wrap

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -305,6 +305,10 @@ td {
   display: flex;
 }
 
+.date {
+  white-space: nowrap;
+}
+
 .disabled {
   color: #e2e4e8;
 }
